--- a/block-BJaaep/code/index.html
+++ b/block-BJaaep/code/index.html
@@ -17,35 +17,35 @@
       <div class="wrapper">
         <h2>Without Event Deligation</h2>
         <ul class="boxes">
-          <li class="box">1</li>
-          <li class="box"></li>
-          <li class="box"></li>
-          <li class="box"></li>
-          <li class="box"></li>
-          <li class="box"></li>
-          <li class="box"></li>
-          <li class="box"></li>
-          <li class="box"></li>
-          <li class="box"></li>
-          <li class="box"></li>
-          <li class="box"></li>
+          <li class="box boxNormal "></li>
+          <li class="box boxNormal"></li>
+          <li class="box boxNormal"></li>
+          <li class="box boxNormal"></li>
+          <li class="box boxNormal"></li>
+          <li class="box boxNormal"></li>
+          <li class="box boxNormal"></li>
+          <li class="box boxNormal"></li>
+          <li class="box boxNormal"></li>
+          <li class="box boxNormal"></li>
+          <li class="box boxNormal"></li>
+          <li class="box boxNormal"></li>
         </ul>
       </div>
       <div class="wrapper">
         <h2>With Event Deligation</h2>
-        <ul class="boxes">
-          <li class="box"></li>
-          <li class="box"></li>
-          <li class="box"></li>
-          <li class="box"></li>
-          <li class="box"></li>
-          <li class="box"></li>
-          <li class="box"></li>
-          <li class="box"></li>
-          <li class="box"></li>
-          <li class="box"></li>
-          <li class="box"></li>
-          <li class="box"></li>
+        <ul class="boxes delegatedContainer">
+          <li class="box boxD"></li>
+          <li class="box boxD"></li>
+          <li class="box boxD"></li>
+          <li class="box boxD"></li>
+          <li class="box boxD"></li>
+          <li class="box boxD"></li>
+          <li class="box boxD"></li>
+          <li class="box boxD"></li>
+          <li class="box boxD"></li>
+          <li class="box boxD"></li>
+          <li class="box boxD"></li>
+          <li class="box boxD"></li>
         </ul>
       </div>
     </div>
