--- a/block-BJaaeo/code/index.html
+++ b/block-BJaaeo/code/index.html
@@ -11,8 +11,37 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>🤯 Calculator 🤩</h1>
-
+    <main>
+      <div class="container">
+        <h1>🤯 Calculator 🤩</h1>
+        <input type="text" id="calculator-screen" >
+        <div class="operation-container">
+          <button class="operation">+</button>
+          <button class="operation">-</button>
+          <button class="operation">*</button>
+          <button class="operation">%</button>
+        </div>
+        <div class="operand-wrapper">
+          <div class="operand-container">
+            <button class="operand">7</button>
+            <button class="operand">8</button>
+            <button class="operand">9</button>
+            <button class="operand">4</button>
+            <button class="operand">5</button>
+            <button class="operand">6</button>
+            <button class="operand">1</button>
+            <button class="operand">2</button>
+            <button class="operand">3</button>
+            <button class="operand">.</button>
+            <button class="operand">0</button>
+            <button class="operand clear">C</button>
+          </div>
+          <div class="equalto-container">
+            <button class="equalto">=</button>
+          </div>
+        </div>
+      </div>
+    </main>
     <script src="./script.js"></script>
   </body>
 </html>
