--- a/block-BJaaer/code/index.html
+++ b/block-BJaaer/code/index.html
@@ -7,14 +7,14 @@
     <title>Handeling Forms 👇</title>
   </head>
   <body>
-    <div>
-      <form class="container">
+    <div class=" user-form">
+      <form class="container" action="modal.html">
         <div class="form-control">
           <label for="name">Your Name:</label>
           <input
             id="name"
             type="text"
-            name="text"
+            name="name"
             placeholder="Enter your name"
           />
         </div>
@@ -29,7 +29,7 @@
         </div>
         <div class="form-control">
           <label for="movies">What do you love?</label>
-          <select id="gender" name="gender">
+          <select id="userchoice" name="entertainment">
             <option value="movies">Movies</option>
             <option value="series">Series</option>
             <option value="others">Others</option>
@@ -41,7 +41,7 @@
           <input
             id="color"
             type="color"
-            name="email"
+            name="color"
             placeholder="Enter your email"
           />
         </div>
@@ -52,7 +52,7 @@
             type="range"
             max="10"
             step="1"
-            name="email"
+            name="range"
             placeholder="Enter your email"
           />
         </div>
@@ -89,9 +89,20 @@
           <input type="checkbox" id="terms" name="terms" />
           <label for="terms">I Agree to Terms</label>
         </div>
-        <button type="submit">Submit</button>
+        <button type="submit" id ="submit">Submit</button>
       </form>
+      <div class="modal-container">
+        <btn class="close-btn">Close</btn>
+        <h3>Hello <span class="modalName"></span></h3>
+        <p>Email : <span class="modalEmail"></span></p>
+        <p> You Love :<span class="modalChoice"></span></p>
+        <p> Color:<span class="modalColor"></span></p>
+        <p> Rating:<span class="modalrating"></span></p>
+        <p>Book Genre:<span class="modalbookgenre"></span></p>
+        <p>👉You <span class="consent"></span> to Terms and Condition </p>
+      </div>
     </div>
+   
     <script src="./script.js"></script>
   </body>
 </html>
