Updated  Handling Input Element

--- a/block-BJaaer/code/index.html
+++ b/block-BJaaer/code/index.html
@@ -91,18 +91,13 @@
         </div>
         <button type="submit" id ="submit">Submit</button>
       </form>
-      <div class="modal-container">
-        <btn class="close-btn">Close</btn>
-        <h3>Hello <span class="modalName"></span></h3>
-        <p>Email : <span class="modalEmail"></span></p>
-        <p> You Love :<span class="modalChoice"></span></p>
-        <p> Color:<span class="modalColor"></span></p>
-        <p> Rating:<span class="modalrating"></span></p>
-        <p>Book Genre:<span class="modalbookgenre"></span></p>
-        <p>👉You <span class="consent"></span> to Terms and Condition </p>
+      <div class="modal-wrapper">
+        <div class="modal-container">
+          <btn class="close-btn">Close</btn>
+          
+        </div>
       </div>
-    </div>
-   
+      </div>
     <script src="./script.js"></script>
   </body>
 </html>
