--- a/block-BJaaer/code/index.html
+++ b/block-BJaaer/code/index.html
@@ -94,7 +94,13 @@
       <div class="modal-wrapper">
         <div class="modal-container">
           <btn class="close-btn">Close</btn>
-          
+          <h3>Hello <span class="modalName"></span></h3>
+          <p>Email : <span class="modalEmail"></span></p>
+          <p> You Love :<span class="modalChoice"></span></p>
+          <p> Color:<span class="modalColor"></span></p>
+          <p> Rating:<span class="modalrating"></span></p>
+          <p>Book Genre:<span class="modalbookgenre"></span></p>
+          <p>👉You <span class="consent"></span> to Terms and Condition </p>
         </div>
       </div>
       </div>
