Assignment: Watch List

--- a/block-BJaaet/code/index.html
+++ b/block-BJaaet/code/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Watch List</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <script src="./script.js"></script>
+    <section>
+      <form class="wrapper">
+        <h1>Enter Watch List </h1>
+        <input type="text" name="moviename" id="moviename">
+        <div class="movielist">
+          <input type="checkbox" name="moviecheck" id="moviecheck">
+          <label for="moviecheck"> hero</label>
+        </div>
+      </form>
+    </section>
+    <script src="script.js"></script>
   </body>
 </html>
