--- a/block-BJaaet/code/index.html
+++ b/block-BJaaet/code/index.html
@@ -11,10 +11,9 @@
       <form class="wrapper">
         <h1>Enter Watch List </h1>
         <input type="text" name="moviename" id="moviename">
-        <div class="movielist">
-          <input type="checkbox" name="moviecheck" id="moviecheck">
-          <label for="moviecheck"> hero</label>
-        </div>
+        <ul class="class">
+          
+        </ul>
       </form>
     </section>
     <script src="script.js"></script>
