--- a/block-BJaaet/code/index.html
+++ b/block-BJaaet/code/index.html
@@ -10,7 +10,7 @@
     <section>
       <form class="wrapper">
         <h1>Enter Watch List </h1>
-        <input type="text" name="moviename" id="moviename">
+        <input type="text" name="moviename" id="moviename" placeholder="Enter movie to watch">
         <ul class="class">
           
         </ul>
