upadated todo app

--- a/block-BJaaev/code/index.html
+++ b/block-BJaaev/code/index.html
@@ -20,7 +20,7 @@
           
         </ul>
         <div class="filter-todo">
-          <button class="all-todo">
+          <button class="all-todo selected">
             All
           </button>
           <button class="active-todo">
@@ -28,6 +28,9 @@
           </button>
           <button class="completed-todo">
             Completed
+          </button>
+          <button class="clear-completed">
+            Clear Completed
           </button>
         </div>
       </div>
