Completed People of GOT || get got characters by searching and by  category name

--- a/block-BJaaew/code/index.html
+++ b/block-BJaaew/code/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+       <h1>🤴Peoples of GOT</h1>
+       <input type="text" placeholder="poples of got">
+    </header>
+    <main>
+      <section>
+        <div class="GOT-container">
+            <div class="all-houses-btn">
+              <button class="house-btn" value="Starks">Stark</button>
+              <button class="house-Lannister" value="Lannisters">Lannister</button>
+              <button class="house-Baratheon" value ="Baratheons">Baratheon</button>
+              <button class="house-Targaryen" value="Targaryens">Targaryen</button>
+              <button class="house-Greyjoy"  value="Greyjoys">Greyjoy</button>
+              <button class="house-Tyrells" value="Tyrells"> Tyrells</button>
+              <button class="house-Tully" value="Tullys">Tully</button>
+              <button class="house-Redwyne" value="Redwyne">Redwyne</button>
+              <button class="house-Dothrakis" value="Freys">Freys</button>
+              <button class="house-Dothrakis" value="Arryns">Arryns</button>
+            </div>
+        </div>
+        <div class="card-container">
+          
+        </div>
+      </section>
+    </main>
     <script src="./data.js"></script>
     <script src="./script.js"></script>
   </body>
