--- a/block-BJaaex/code/index.html
+++ b/block-BJaaex/code/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Menory Game</title>
+    <title>Memory Game</title>
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body></body>
+  <body>
+    <section class="game-container">
+
+    </section>
+    <script src="script.js"></script>
+    <!-- <script src="data.js"></script> -->
+  </body>
 </html>
