--- a/block-BJaafa/code/index.html
+++ b/block-BJaafa/code/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chrome Extension</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <script src="./script.js"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chrome  Extension</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- font awesome cdn link  -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+</head>
+<body>
+    <div class="command-container">
+        <h2 class="command">
+            show  the command here
+        </h2>
+        <p class="command-description">
+            Purpose of that  command
+        </p>
+        <button class="generate-command">
+            <i class="fas fa-redo-alt"></i>
+            GenerateCommand
+        </button>
+    </div>
+    <script src="index.js"></script>
+    <script src="data.js"></script>
+</body>
 </html>
